# sql-agent-test

./: README.md  main.py  pyproject.toml  requirements.txt
sql-agent/: main.py
sql_agent/: clickhouse.db  main.py
