# /Users/yuvnagupta/Desktop/sql-agent-test/pyproject.toml

[tool.poetry]
name = "sql-agent" 
version = "0.1.0"
description = "SQL Agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md" # Ensure README.md exists in the same directory as pyproject.toml

# Define where your actual Python package code is located
# If your main.py is inside /Users/yuvnagupta/Desktop/sql-agent-test/sql_agent/
packages = [
    { include = "sql-agent" } # <--- This tells Poetry to include the 'sql_agent' folder as the package
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# List your direct dependencies here, matching your requirements.txt
langchain-openai = ">=0.3.3"
langchain-community = ">=0.1.3"
langchain-core = ">=0.3.58"
python-dotenv = ">=1.0.0"
sqlalchemy = ">=1.4.0"
pydantic = ">=2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
